 - [ZBXNEXT-483] added vfs.file.contents[file,encoding] check (asaveljevs)
 - [ZBXNEXT-457] added support of nanoseconds for history tables (Sasha)
 - [DEV-449] added display of host time in screens (Aly)
 - [DEV-449] added system.localtime[local] check (Sasha)
 - [DEV-444] added optional suppressing of processing of older data in log[], logrt[] and eventlog[] (Sasha)

Changes for 1.8.4rc3

 - [ZBX-2577] fixed template trigger update affects downstream triggers (Vedmak)
 - [ZBX-3221] fixed host deletion through API (Aly)
 - [ZBX-3220] fixed error when delete host on postgresql db (Vedmak)
 - [ZBX-2293] fixed server terminating when sending "database down" alerts using scripts (asaveljevs,Sasha)
 - [ZBX-3184] fixed 1000 vs. 1024 multipliers for bits, bytes, and other units in notification macros (asaveljevs)
 - [ZBX-3184] fixed negative values with unit suffixes in notification macros (asaveljevs)
 - [ZBX-3211] updated Ukrainian translation; renamed locale to uk_ua; thanks to zalex_ua (Richlv)
 - [ZBX-3085] fixed possible stop to send data from proxy after shutdown of MySQL server; thanks to Takanori Suzuki (Sasha)
 - [ZBX-3218] server and proxy are no longer built with libcurl by default (asaveljevs)
 - [ZBX-3145] fixed user macros resolving (Vedmak)
 - [ZBX-3215] fixed filtering by group in trigger selection popup (Vedmak)
 - [ZBX-3144] removed parsing of existing expression in trigger expression popup (Vedmak)
 - [ZBX-3207] fixed possibility to click on web items in trigger expressions (Vedmak)
 - [ZBX-3021] fixed possibility to create dependency between host and template triggers (Vedmak)
 - [ZBX-3205] fixed incorrect event duration count (Aly)
 - [ZBX-3183] fixed maintenance permission issue (KB)
 - [ZBX-3183] added screenname GET parameter support to screens.php (KB)
 - [ZBX-2639] added net.if.total and net.if.list items in the help_items table (Sasha)
 - [ZBX-1600] added support of value mapping for {ITEM.VALUE} macro in notifications (Sasha)