@@ -41,6 +41,8 @@ include_once('include/page_header.php');
 		'triggers' =>		array(T_ZBX_INT, O_OPT,	P_SYS,	DB_ID,	null),
 		'events'=>			array(T_ZBX_INT, O_OPT,	P_SYS,	DB_ID,	null),
 		'message'=>			array(T_ZBX_STR, O_OPT,	NULL,	$bulk ? NULL : NOT_EMPTY,	'isset({save})||isset({saveandreturn})'),
+		'backurl'=>			array(T_ZBX_STR, O_OPT,	NULL,	NULL,	null),
+
 // Actions
 		'go'=>				array(T_ZBX_STR, O_OPT, P_SYS|P_ACT, NULL, NULL),
 // form
@@ -50,10 +52,8 @@ include_once('include/page_header.php');
 	);
 	check_fields($fields);
 
-
 	if(isset($_REQUEST['cancel'])){
-		$last_page = $USER_DETAILS['last_page'];
-		$url = $last_page ? new CUrl($last_page['url']) : new CUrl('tr_status.php?hostid='.CProfile::get('web.tr_status.hostid', 0));
+		$url = new CUrl(urldecode($_REQUEST['backurl']));
 		jsRedirect($url->getUrl());
 		exit();
 	}
@@ -64,6 +64,7 @@ include_once('include/page_header.php');
 	}
 
 	$bulk = !isset($_REQUEST['eventid']);
+	$_REQUEST['backurl'] = get_request('backurl', 'tr_status.php');
 ?>
 <?php
 	if(!$bulk){
@@ -112,19 +113,10 @@ include_once('include/page_header.php');
 		}
 
 		if(isset($_REQUEST['saveandreturn'])){
-			$last_page = $USER_DETAILS['last_page'];
-
-			if(!$last_page){
-				$url = new CUrl('tr_status.php?hostid='.CProfile::get('web.tr_status.hostid', 0));
-			}
-			else{
-				$url = new CUrl($last_page['url']);
-			}
-
+			$url = new CUrl(urldecode($_REQUEST['backurl']));
 			jsRedirect($url->getUrl());
 			exit();
 		}
-
  	}
 
 ?>
@@ -132,7 +124,7 @@ include_once('include/page_header.php');
 	$msg = $bulk ? ' BULK ACKNOWLEDGE ' : expand_trigger_description_by_data($event_trigger);
 	show_table_header(array(S_ALARM_ACKNOWLEDGES_BIG.': ', $msg));
 	print(SBR);
-	
+
 	if($bulk){
 		$title = S_ACKNOWLEDGE_ALARM_BY;
 		$btn_txt2 = S_ACKNOWLEDGE.' '.S_AND_SYMB.' '.S_RETURN;
@@ -175,6 +167,8 @@ include_once('include/page_header.php');
 
 	$frmMsg = new CFormTable($title.' "'.$USER_DETAILS['alias'].'"');
 
+	$frmMsg->addVar('backurl', $_REQUEST['backurl']);
+
 	if(isset($_REQUEST['eventid'])){
 		$frmMsg->addVar('eventid', $_REQUEST['eventid']);
 	}
@@ -193,7 +187,7 @@ include_once('include/page_header.php');
 	$frmMsg->addRow(S_MESSAGE, new CTextArea('message', '', 80, 6));
 	$frmMsg->addItemToBottomRow(new CButton('saveandreturn', $btn_txt2));
 	$bulk ? '' : $frmMsg->addItemToBottomRow(new CButton('save', $btn_txt));
-	$frmMsg->addItemToBottomRow(new CButtonCancel());
+	$frmMsg->addItemToBottomRow(new CButtonCancel('&backurl='.$_REQUEST['backurl']));
 
 	$frmMsg->show(false);
 
